fix(auth): Resolve merge conflicts in SecurityConfig.java