@@ -10,25 +10,13 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-<<<<<<< HEAD
-<<<<<<< HEAD
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-=======
->>>>>>> b88a4a62041c4f9af991a75fb1ab5f91422c1890
-=======
->>>>>>> origin/main
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-<<<<<<< HEAD
-<<<<<<< HEAD
 import java.util.List;
-=======
->>>>>>> b88a4a62041c4f9af991a75fb1ab5f91422c1890
-=======
->>>>>>> origin/main
 
 @Configuration
 @EnableWebSecurity
@@ -45,22 +33,10 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-<<<<<<< HEAD
-<<<<<<< HEAD
-        configuration.setAllowedOrigins(List.of("http://localhost:5173", "http://localhost:3000"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-=======
-=======
->>>>>>> origin/main
         // Allow Vite dev server and any localhost port
         configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-<<<<<<< HEAD
->>>>>>> b88a4a62041c4f9af991a75fb1ab5f91422c1890
-=======
->>>>>>> origin/main
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -74,18 +50,10 @@ public class SecurityConfig {
                 .csrf(AbstractHttpConfigurer::disable)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
-<<<<<<< HEAD
-<<<<<<< HEAD
                         .requestMatchers("/api/auth/**").permitAll()
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
-=======
-=======
->>>>>>> origin/main
-                        .anyRequest().permitAll()  // Allow all routes for hackathon testing
-                );
->>>>>>> b88a4a62041c4f9af991a75fb1ab5f91422c1890
         return http.build();
     }
 }
